# my-youtube-transcript-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
youtube_transcriber_mcp/: __main__.py  cli.py  config.py  server.py  transcriber.py  utils.py
youtube_transcriber_mcp/strategies/: whisper_fallback.py  youtube_api.py
